--- a/src/components/spare-parts-form/spare-parts-form.html
+++ b/src/components/spare-parts-form/spare-parts-form.html
@@ -4,10 +4,10 @@
       <div class="container">
         <div class="row">
           <div class="col-12 mb-3">
-            <h5 class="mt-5 mb-4">Post a new Spare Ad</h5>
+            <h5 class="mt-5 mb-4">Post A New Ad</h5>
           </div>
           <div class="col-12 mb-3">
-            <label>Select Spare Type <span>*</span></label>
+            <label>Select Spare Part Type <span>*</span></label>
             <!-- prettier-ignore -->
             <Select :options="sparePartsCategoryList"
               placeholder="Select Type" @selectValue="getCategoryOptions($event)" :selected="selectedSpareType" />
