--- a/src/views/rental-details/rental-details.html
+++ b/src/views/rental-details/rental-details.html
@@ -245,7 +245,7 @@
           />
         </div>
 
-        <div class="map mt-4">
+        <div class="map mt-4" v-if="rentalData.locationMap">
           <iframe
             :src="rentalData.locationMap"
             width="100%"
