--- a/src/components/classifieds-form/number-plates/number-plates.html
+++ b/src/components/classifieds-form/number-plates/number-plates.html
@@ -36,12 +36,36 @@
   </div>
   <div class="col-12 mb-3">
     <label>
-      Place
+      Location
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.emiratesLocationList()" :error="newPostValidation.place" errorText="Select Place"
-      placeholder="Select Place" @selectValue="updatePostData('place', $event)" :selected="newPost.place" />
+    <Select :options="utils.emiratesLocationList()" :error="newPostValidation.place" errorText="Select Location"
+      placeholder="Select Location" @selectValue="updatePostData('place', $event)" :selected="newPost.place" />
+  </div>
+  <div class="col-12 mb-3">
+    <label>
+      Select SubCategory
+      <span>*</span>
+    </label>
+    <!-- prettier-ignore -->
+    <Select :options="utils.numPlatesSubCatList()" :error="newPostValidation.subcategory" errorText="Select SubCategory" placeholder="Select SubCategory"
+    @selectValue="updatePostData('subcategory', $event)" :selected="newPost.subcategory" />
+  </div>
+  <div class="col-12 mb-3">
+    <label>
+      Select Emirate
+      <span>*</span>
+    </label>
+    <!-- prettier-ignore -->
+    <Select :options="removeAlAinList" :error="newPostValidation.emirate" errorText="Select Emirate"
+    placeholder="Select Emirate" @selectValue="updatePostData('emirate', $event)" :selected="newPost.emirate" />
+  </div>
+  <div class="col-12 mb-3">
+    <label>Select No of Digits</label>
+    <!-- prettier-ignore -->
+    <Select :options="utils.numPlatesDigitsList()" :error="newPostValidation.digits" errorText="Select No of Digits" placeholder="Select No of Digits"
+    @selectValue="updatePostData('digits', $event)" :selected="newPost.digits" />
   </div>
   <div class="col-12 mb-3">
     <label>Display Picture<span>*</span></label>
@@ -60,30 +84,7 @@
     type="file" accept="image/*" multiple name="galleryImages[]" id="galleryImages" :value="newPost.galleryImages"
     @value="updatePostData('galleryImages', $event)" />
   </div>
-  <div class="col-12 mb-3">
-    <label>
-      Select SubCategory
-      <span>*</span>
-    </label>
-    <!-- prettier-ignore -->
-    <Select :options="utils.numPlatesSubCatList()" :error="newPostValidation.subcategory" errorText="Select SubCategory" placeholder="Select SubCategory"
-    @selectValue="updatePostData('subcategory', $event)" :selected="newPost.subcategory" />
-  </div>
-  <div class="col-12 mb-3">
-    <label>
-      Select Emirate
-      <span>*</span>
-    </label>
-    <!-- prettier-ignore -->
-    <Select :options="utils.emiratesLocationList()" :error="newPostValidation.emirate" errorText="Select Emirate"
-    placeholder="Select Emirate" @selectValue="updatePostData('emirate', $event)" :selected="newPost.emirate" />
-  </div>
-  <div class="col-12 mb-3">
-    <label>Select No of Digits</label>
-    <!-- prettier-ignore -->
-    <Select :options="utils.numPlatesDigitsList()" :error="newPostValidation.digits" errorText="Select No of Digits" placeholder="Select No of Digits"
-    @selectValue="updatePostData('digits', $event)" :selected="newPost.digits" />
-  </div>
+
   <div class="col-12 mb-3">
     <label> Video Link </label>
     <!-- prettier-ignore -->
