--- a/src/components/common/motorcycle-list/motorcycle-list.html
+++ b/src/components/common/motorcycle-list/motorcycle-list.html
@@ -16,7 +16,7 @@
       />
       <div class="d-flex justify-content-center mt-2 text-uppercase">
         {{getSelectedCarMake ? `${getCarModelCount} Models Found` :
-        `${getCarMakeCount} Cars Found`}}
+        `${getCarMakeCount} Brands Found`}}
       </div>
     </div>
     <template v-if="!getSelectedCarMake">
