--- a/src/components/garage-details/garage-details.scss
+++ b/src/components/garage-details/garage-details.scss
@@ -31,16 +31,28 @@
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
+      > div {
+        width: 100%;
+        &:first-child {
+          align-items: center;
+          display: flex;
+        }
+      }
+      h5 {
+        font-size: 1.25rem;
+        font-weight: 700;
+      }
       .garage-dp {
         width: 60px;
         height: 60px;
         border-radius: 50%;
         object-fit: cover;
         margin-right: 20px;
+        border: 1px solid $purple;
       }
       .phone {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
         button {
           font-size: 0.75rem;
           padding: 10px 15px !important;
@@ -138,7 +150,7 @@
           background-color: rgba($black, 0.05);
         }
         p {
-          width: 100%;
+          //width: 100%;
           margin-bottom: 0;
           padding: 5px 0;
           font-weight: 600;
@@ -173,7 +185,12 @@
     .header {
       flex-direction: column;
       align-items: center !important;
-      h4 {
+      > div {
+        &:first-child {
+          flex-direction: column;
+        }
+      }
+      h5 {
         margin: 20px 0;
         width: 100%;
         text-align: center;
@@ -187,8 +204,8 @@
         position: fixed;
         bottom: 55px;
         padding: 10px 0;
-        left: 15px;
-        right: 15px;
+        // left: 15px;
+        // right: 15px;
         z-index: 9;
         flex-wrap: nowrap !important;
         > button {
