--- a/src/components/post-detail-table/post-detail-table.html
+++ b/src/components/post-detail-table/post-detail-table.html
@@ -138,7 +138,7 @@
     </li>
     <li>
       <p>Price</p>
-      <p>{{data.priceToPrice}}</p>
+      <p>{{data.price}}</p>
     </li>
     <li>
       <p>Exterior Color</p>
