--- a/src/components/rental-list/rental-list.html
+++ b/src/components/rental-list/rental-list.html
@@ -2,10 +2,12 @@
   <div class="row">
     <div class="col-12">
       <div class="container">
-        <div class="row latest-posts" v-if="postData.length">
+        <div class="row latest-posts">
           <div class="col-12 my-3 heading-wrapper mt-lg-5 mb-lg-4">
             <h5 class="heading" v-html="title"></h5>
             <div class="right-column">
+              <!-- prettier-ignore -->
+              <Button type="hollow small" text="Clear Filter" @click="clearFilter" v-if="isFilter" class="mr-3" />
               <div class="sort-wrapper" title="Sort Options">
                 <font-awesome-icon
                   :icon="['fas', 'sort']"
@@ -23,14 +25,20 @@
                   :icon="['fas', 'sliders-h']"
                   @click="filterToggle"
                 />
-                <PostFilter
+                <RentalFilter
                   :data="postData"
                   @close="filterToggle"
                   v-if="filterEnabled"
+                  @filteredData="updatePostData($event)"
                 />
               </div>
             </div>
           </div>
+        </div>
+        <section
+          class="row d-flex p-0 flex-wrap"
+          v-if="postData && postData.length"
+        >
           <div class="col-12 col-lg-6 py-3" v-for="post in postData">
             <div class="card" :class="post.featured && 'featured'">
               <div class="thumb-wrapper">
@@ -114,7 +122,7 @@
             <!-- prettier-ignore -->
             <Button type="hollow" width="100%" text="Load More" @click="loadMore" />
           </div>
-        </div>
+        </section>
         <div
           v-else
           class="d-flex flex-column justify-content-center align-items-center no-result"
